<resources>
    <string name="app_name">SMB Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="empty_search_result">No results </string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    <string name="msg_name">Name : <b>%s</b></string>
    <string name="msg_email">Email : <b>%s</b></string>

    <string name="title_registration_step_one">Registration</string>
    <string name="title_registration_step_two">Registration Conti..</string>

    <string name="error_network_server">Server not responding. Try again in a few</string>
    <string name="error_network">Sorry, we couldn\'t connect to internet</string>


</resources>
