<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_registration_step_two"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/heavy"
            app:fontFamily="@font/heavy"
            android:paddingTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:paddingBottom="15dp"
            android:id="@+id/txt_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            tools:text="@string/name"
            android:fontFamily="@font/bold"
            app:fontFamily="@font/bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/txt_name"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:text="@string/email"
            android:fontFamily="@font/medium"
            app:fontFamily="@font/medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/txt_password"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>